--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mobx-react": "^7.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "sass": "^1.60.0"
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.3",
