--- a/package.json
+++ b/package.json
@@ -1,48 +1,26 @@
 {
-  "name": "poker-final-project",
-  "version": "0.1.0",
+  "name": "my-project-name",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "yarn run eslint --fix src"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "mobx": "^6.6.0",
     "mobx-devtools-mst": "^0.9.30",
     "mobx-react": "^7.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "^5.0.1",
     "sass": "^1.60.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^12.1.3",
-    "@types/jest": "^29.4.0",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "parcel": "^2.6.0",
-    "process": "^0.11.10",
-    "typescript": "^4.5.6"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
   }
 }
