--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "my-project-name",
+  "name": "poker",
+  "homepage": "https://babakjalilian.github.io/poker",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +11,9 @@
     "test": "vitest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "lint:fix": "npx eslint --fix ."
+    "lint:fix": "npx eslint --fix .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "mobx": "^6.6.0",
@@ -33,14 +36,15 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "prop-types": "^15.8.1",
-    "storybook": "^7.0.6",
     "eslint": "^8.38.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^5.0.0",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.6",
     "typescript": "^5.0.4",
     "vite": "^4.2.0",
     "vitest": "^0.30.1"
