--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "test": "vitest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "lint:fix": "npx eslint --fix .",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "lint:fix": "npx eslint --fix ."
   },
   "dependencies": {
     "mobx": "^6.6.0",
@@ -42,7 +40,6 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "gh-pages": "^5.0.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.6",
     "typescript": "^5.0.4",
