--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "lint:fix": "npx eslint --fix ."
+    "lint:fix": "npx eslint --fix .",
+    "chromatic": "npx chromatic --project-token=355b03ef5de6"
   },
   "dependencies": {
     "mobx": "^6.6.0",
@@ -34,6 +35,7 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "chromatic": "^6.17.3",
     "eslint": "^8.38.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
@@ -45,5 +47,7 @@
     "typescript": "^5.0.4",
     "vite": "^4.2.0",
     "vitest": "^0.30.1"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "poker@0.0.0"
 }
